--- a/src/SConstruct
+++ b/src/SConstruct
@@ -18,10 +18,10 @@ print("Build mode = %s" % buildmode)
 # Library
 env = Environment(CPPPATH=[ '.' ])
 env.Append(CCFLAGS=ccflags)
-libesch_src = ['esch_alloc.c', 'esch_log.c', 'esch_parser.h']
+libesch_src = ['esch_alloc.c', 'esch_log.c', 'esch_parser.c']
 esch = env.StaticLibrary('esch', libesch_src)
 # Unit test
-utest_src = [ 'utest/esch_t_alloc.c', 'utest/esch_utest.c' ]
+utest_src = [ 'utest/esch_t_alloc.c', 'utest/esch_utest.c', 'utest/esch_t_parser.c' ]
 esch_utest = env.Program('esch_utest', utest_src, LIBS=[ 'esch' ], LIBPATH=[ '.' ])
 # Dependencies
 env.Depends(esch_utest, esch)
