--- a/src/SConstruct
+++ b/src/SConstruct
@@ -5,6 +5,7 @@ ccflags_debug = ccflags_common + [ "-g" ]
 ccflags_release = ccflags_common + [ "-O2", "-DNDEBUG" ]
 ccflags = ccflags_debug
 
+compiler = ARGUMENTS.get('cc', None)
 buildmode = ARGUMENTS.get('mode', 'release')
 if buildmode.upper() == 'DEBUG':
     ccflags = ccflags_debug
@@ -16,7 +17,10 @@ else:
 print("Build mode = %s" % buildmode)
 
 # Library
-env = Environment(CPPPATH=[ '.' ])
+if compiler is None:
+    env = Environment(CPPPATH=[ '.' ])
+else:
+    env = Environment(CPPPATH=[ '.' ], CC=compiler)
 env.Append(CCFLAGS=ccflags)
 libesch_src = ['esch_alloc.c', 'esch_log.c', 'esch_parser.c', \
                'esch_string.c', 'esch_range.c']
