--- a/src/SConstruct
+++ b/src/SConstruct
@@ -1,5 +1,5 @@
-#!/usr/bin/env python
-
+#!/usr/bin/env scons
+# vim:ft=python
 ccflags_common = [ "-std=c89" ]
 ccflags_debug = ccflags_common + [ "-g" ]
 ccflags_release = ccflags_common + [ "-O2", "-DNDEBUG" ]
@@ -31,6 +31,7 @@ utest_src = [ 'utest/esch_utest.c', \
               'utest/esch_t_parser.c', \
               'utest/esch_t_string.c' \
             ]
-esch_utest = env.Program('esch_utest', utest_src, LIBS=[ 'esch' ], LIBPATH=[ '.' ])
+esch_utest = env.Program('esch_utest', utest_src, LIBS=[ 'esch' ], \
+                         LIBPATH=[ '.' ])
 # Dependencies
 env.Depends(esch_utest, esch)
