--- a/src/SConstruct
+++ b/src/SConstruct
@@ -42,7 +42,7 @@ else:
     env = Environment(CPPPATH=[ '.' ], CC=compiler)
 env.Append(CCFLAGS=ccflags)
 libesch_src = ['esch_alloc.c', 'esch_log.c', 'esch_parser.c', \
-               'esch_string.c', 'esch_range.c']
+               'esch_string.c', 'esch_range.c', 'esch_list.c' ]
 esch = env.StaticLibrary('esch', libesch_src)
 # Unit test
 utest_src = [ 'utest/esch_utest.c', \
