[New][Exp] Add new config design. Can't build right now.

--- a/src/SConstruct
+++ b/src/SConstruct
@@ -44,7 +44,7 @@ env.Append(CCFLAGS=ccflags)
 # Library
 libesch_src = ['esch_alloc.c', 'esch_log.c', 'esch_parser.c', \
                'esch_string.c', 'esch_range.c', 'esch_list.c', \
-               'esch_object.c' ]
+               'esch_object.c', 'esch_config.c' ]
 esch = env.StaticLibrary('esch', libesch_src)
 # Unit test
 utest_src = [ 'utest/esch_utest.c', \
