--- a/src/SConstruct
+++ b/src/SConstruct
@@ -60,13 +60,15 @@ env.Append(CCFLAGS=ccflags)
 # Library
 libesch_src = ['esch_alloc.c', 'esch_log.c', \
                'esch_string.c', 'esch_range.c', \
-               'esch_object.c', 'esch_config.c' ]
+               'esch_object.c', 'esch_config.c', \
+               'esch_vector.c' ]
 esch = env.StaticLibrary('esch', libesch_src)
 # Unit test
 utest_src = [ 'utest/esch_utest.c', \
               'utest/esch_t_alloc.c', \
               'utest/esch_t_string.c', \
-              'utest/esch_t_config.c' \
+              'utest/esch_t_config.c', \
+              'utest/esch_t_vector.c' \
             ]
 esch_utest = env.Program('esch_utest', utest_src, LIBS=[ 'esch' ], \
                          LIBPATH=[ '.' ])
