[Fix] Add Windows object and target files to .hgignore list.

--- a/.hgignore
+++ b/.hgignore
@@ -2,6 +2,9 @@ src/tags$
 \..*\.swp$
 src/\..*\.swp$
 src/.*\.o$
+src/.*\.obj$
 src/libesch\.a$
+src/libesch\.lib$
 src/esch_utest$
+src/esch_utest.exe$
 .sconsign.dblite
