--- a/src/SConstruct
+++ b/src/SConstruct
@@ -58,18 +58,23 @@ print("Build mode = %s, compiler = %s" % (buildmode, compiler))
 env.Append(CCFLAGS=ccflags)
 
 # Library
-libesch_src = ['esch_alloc.c', 'esch_log.c', \
-               'esch_string.c', 'esch_range.c', \
-               'esch_object.c', 'esch_config.c', \
-               'esch_vector.c', 'esch_number.c' ]
+#libesch_src = ['esch_alloc.c', 'esch_log.c', \
+#               'esch_string.c', 'esch_range.c', \
+#               'esch_object.c', 'esch_config.c', \
+#               'esch_vector.c', 'esch_number.c' ]
+libesch_src = [ \
+        'esch_object.c', 'esch_type.c', \
+        'esch_alloc.c', 'esch_log.c', \
+        'esch_config.c', 'esch_gc.c' \
+        ]
 esch = env.StaticLibrary('esch', libesch_src)
 # Unit test
 utest_src = [ 'utest/esch_utest.c', \
               'utest/esch_t_alloc.c', \
-              'utest/esch_t_string.c', \
-              'utest/esch_t_config.c', \
-              'utest/esch_t_vector.c', \
-              'utest/esch_t_number.c' \
+#              'utest/esch_t_string.c', \
+#              'utest/esch_t_config.c', \
+#              'utest/esch_t_vector.c', \
+#              'utest/esch_t_number.c' \
             ]
 esch_utest = env.Program('esch_utest', utest_src, LIBS=[ 'esch' ], \
                          LIBPATH=[ '.' ])
