--- a/src/SConstruct
+++ b/src/SConstruct
@@ -65,13 +65,14 @@ env.Append(CCFLAGS=ccflags)
 libesch_src = [ \
         'esch_object.c', 'esch_type.c', \
         'esch_alloc.c', 'esch_log.c', \
-        'esch_config.c', 'esch_gc.c' \
+        'esch_config.c', 'esch_gc.c', \
+        'esch_string.c', 'esch_range.c' \
         ]
 esch = env.StaticLibrary('esch', libesch_src)
 # Unit test
 utest_src = [ 'utest/esch_utest.c', \
               'utest/esch_t_alloc.c', \
-#              'utest/esch_t_string.c', \
+              'utest/esch_t_string.c', \
 #              'utest/esch_t_config.c', \
 #              'utest/esch_t_vector.c', \
 #              'utest/esch_t_number.c' \
